force-app/main/default/objects/Schedule__c/fields/Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assignments__c</fullName>
    <label>Number of Assignments</label>
    <summaryForeignKey>Resource_Assignment__c.Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>