force-app/main/default/objects/Schedule__c/fields/Number_of_Work_Orders_in_Week__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Work_Orders_in_Week__c</fullName>
    <formula>Week__r.Number_of_Work_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Work Orders in Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>