force-app/main/default/objects/Schedule__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Total_Fine__c + Total_Labour_Cost__c +  Total_Fine_Unfinished_Work_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>