force-app/main/default/objects/Schedule__c/fields/Total_Fine__c.field-meta.xml
<CustomField>
    <fullName>Total_Fine__c</fullName>
    <label>Total Fine Late Work Orders</label>
    <summarizedField>Resource_Assignment__c.Fine_Shadow__c</summarizedField>
    <summaryForeignKey>Resource_Assignment__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>