force-app/main/default/objects/Schedule__c/fields/Total_Fine_Unfinished_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Fine_Unfinished_Work_Orders__c</fullName>
    <formula>Week__r.Fine_per_unfinished_WO__c * (Number_of_Work_Orders_in_Week__c -  Number_of_Assignments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fine Unfinished Work Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>