force-app/main/default/objects/Schedule__c/fields/Total_Hours_spent_in_Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_spent_in_Overtime_Hours__c</fullName>
    <label>Total Hours spent in Overtime Hours</label>
    <summarizedField>Resource_Assignment__c.Number_of_Hours_Worked_in_Overtime__c</summarizedField>
    <summaryForeignKey>Resource_Assignment__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>