force-app/main/default/objects/Schedule__c/fields/Total_Labour_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Labour_Cost__c</fullName>
    <label>Total Labour Cost</label>
    <summarizedField>Resource_Assignment__c.Cost__c</summarizedField>
    <summaryForeignKey>Resource_Assignment__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>