force-app/main/default/objects/Schedule__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <referenceTo>Week__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>