force-app/main/default/objects/Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Assignments__c</columns>
    <columns>Number_of_Work_Orders_in_Week__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Total_Fine__c</columns>
    <columns>Total_Fine_Unfinished_Work_Orders__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Hours_spent_in_Overtime_Hours__c</columns>
    <columns>Total_Hours_spent_in_Regular_Time__c</columns>
    <columns>Total_Labour_Cost__c</columns>
    <columns>Week__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>